# benzene

./: configure.ac
src/benzenetest/: Makefile.am
src/hex/: VCS.cpp  VCS.hpp
src/mohex/: Makefile.am  MoHexEngine.cpp  MoHexThreadState.cpp  MoHexThreadState.hpp
src/solver/: DfpnCommands.cpp  DfpnSolver.cpp  DfpnSolver.hpp
src/test/: Makefile.am
src/wolve/: Makefile.am
tools/mergesgf/: Makefile.am
